# IITP_Python

./: .coverage  .flake8  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  coverage.xml  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
6sem/: Hometask_sort_Serov.ipynb
6sem/HW1/: HW1_Serov.ipynb
6sem/HW2/: HW2_HF.ipynb  draw_line.py  hough_transform.py  image_processing.py  line_generation.ipynb  main.py  test.py
6sem/HW2/.ipynb_checkpoints/: Fast_Hough_Transformation-checkpoint.ipynb  HW2_HF-checkpoint.ipynb
Hough_main/: noxfile.py  pyproject.toml
Hough_main/src/gigagor/: hough_transform.py  main.py
SS/: Feedback 1.ipynb  Feedback2.ipynb  HW1.ipynb  HW2.ipynb  HW3.ipynb  HW5.ipynb  Homework 5 by Serov Egor.ipynb  Homework2 Serov Egor.ipynb  Homework3 by Serov Egor.ipynb  L1.ipynb  L3.ipynb  L5.ipynb  Untitled.ipynb  myls.py  myls_config.yaml  myls_config2.yaml  myls_hydra.py  scatter_plot.py  tasks.txt
SS/HW4/: HW4.ipynb  Homework4 by Serov Egor.ipynb  calculator_test.py
SS/HW4/.ipynb_checkpoints/: HW4-checkpoint.ipynb  Homework4 by Serov Egor-checkpoint.ipynb
SS/HW4/calc/: calculator.py
SS/HW4/calc/ops/: __init__.py  add.py  divide.py  multiply.py  subtract.py
SS/multirun/2023-07-11/21-39-12/: multirun.yaml
SS/multirun/2023-07-11/21-54-53/: multirun.yaml
SS/outputs/2023-07-11/21-39-39/.hydra/: config.yaml  hydra.yaml
SS/outputs/2023-07-11/21-40-04/.hydra/: hydra.yaml
SS/outputs/2023-07-11/21-41-53/.hydra/: hydra.yaml
SS/outputs/2023-07-11/21-43-18/.hydra/: config.yaml  hydra.yaml
SS/outputs/2023-07-11/21-45-34/.hydra/: hydra.yaml
SS/outputs/2023-07-11/21-46-08/.hydra/: hydra.yaml
SS/outputs/2023-07-11/21-47-09/.hydra/: hydra.yaml
docs/: conf.py  index.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
src/fast_hough_transform/: __init__.py  console.py  draw_line.py  hough_transform.py  image_processing.py  main.py
src/gigagor/: console.py  draw_line.py  hough_transform.py  image_processing.py  main.py
tests/: test_console.py  test_hough.py
(+60 files in other folders)
