[tool.poetry]
name = "fast-hough-transform"
version = "0.1.0"
description = ""
authors = ["Egor Serov <egorserov@hehe.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/awesomeslayer/IITP_Python"
repository = "https://github.com/awesomeslayer/IITP_Python"
keywords = ["hough", "transform"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"


opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"

black = "^24.4.2"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
safety = "^3.2.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.8.1"}
typeguard = "^4.2.1"
flake8-annotations = "^3.1.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
codecov = "^2.1.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# click
[tool.poetry.scripts]
fast-hough-transform = "fast_hough_transform.console:main"

# coverage
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fast_hough_transform"]

[tool.coverage.report]
show_missing = true
