[tool.poetry]
name = "gigagor"
version = "0.1.0"
description = ""
authors = ["gl_epka <nechaevgleb@inbox.ru>"]
license = "MIT"
homepage = "https://github.com/Gleb-hub/GIGAGOR"
repository = "https://github.com/Gleb-hub/GIGAGOR"
keywords = ["hough", "transform"]

[tool.poetry.scripts]
gigagor = "gigagor.console:main"


[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
colorama = "^0.4.6"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["gigagor"]

[tool.coverage.report]
show_missing = true
